support for .dockerignore file added [ci-skip]